sample/misc/error/eval_failwith.bfr
let _ = failwith "Failed"

codegen $